<resources>
    <string name="app_name">GymBro</string>
    <string name="show_nearby_gyms">Show Nearby Gyms</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="timer">Timer</string>
    <string name="countdown">Countdown</string>
    <string name="set_time">Set Time</string>
    <string name="enter_time_in_seconds">Enter time in seconds</string>
    <string name="time_remaining_0">Time remaining: 0</string>
    <string name="start">Start</string>
    <string name="exercises">Exercises</string>
    <string name="back">Back</string>
    <string name="shoulders">Shoulders</string>
    <string name="legs">Legs</string>
    <string name="chest">Chest</string>
    <string name="here">here</string>
    <string name="abs">Abs</string>
    <string name="triceps">Triceps</string>
    <string name="biceps">Biceps</string>
    <string name="textview">TextView</string>
    <string name="Exercise">TextView</string>
    <string name="ULC">TextView</string>
    <string name="PP">TextView</string>
    <string name="Muscle">1</string>
    <string name="LeveL">TextView</string>
    <string name="Level">Level</string>
    <string name="next">Next</string>
    <string name="Exercises">Exercises</string>
    <string name="muscle_group">Muscle_Group</string>
    <string name="select_muscle_group">Select Muscle Group</string>
    <string name="select_exercise">Select Excercise</string>
    <string name="add_workout">add_workout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add_Workout">Add_Workout</string>
    <string name="nearby_gyms">Nearby Gyms</string>
    <string name="Add_Workouts">Add Workout</string>
    <string name="Home">Home</string>

    <string name="choose_activity_level">Choose Activity Level</string>
    <string-array name="activity_levels">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string name="choose_goal">Choose Goal</string>
    <string-array name="goals">
        <item>Maintaining</item>
        <item>Bulking</item>
        <item>Cutting</item>
    </string-array>

    <string name="choose_gender">Choose Gender</string>
    <string name="additional_information">Additional Information</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save">Save</string>
    <string name="Utilities">Utilities</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_supplements_maps">SupplementsMapsActivity</string>
    <string name="Maps">Maps</string>
    <string name="title_activity_gym_maps">activity_gym_maps</string>
    <string name="title_activity_clothing_maps">ClothingMapsActivity</string>
    <string name="add_your_workout">Add Your Workout</string>
    <string name="your_workouts">Your Workouts</string>
    <string name="suggested_workouts">Suggested Workouts</string>
    <string name="email">email</string>
    <string name="Welcome">Welcome</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password" />
    <string name="create_account">create_account</string>
    <string name="workout_time">Workout Time</string>
    <string name="my_profile">My Profile</string>
    <string name="we_all_start_somewhere">We all start somewhere</string>
    <string name="resigster">Register</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="_00">00</string>
    <string name="profile">Profile</string>
    <string name="workouts">Workouts</string>
    <string name="Email">Email</string>
    <string name="Εmail">Email</string>

</resources>