<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map"
        android:title="@string/Maps"
        />
    <item
        android:id="@+id/action_utilities"
        android:icon="@drawable/ic_utilities"
        android:title="@string/Utilities"
        />
    <item
        android:id="@+id/action_exercises"
        android:icon="@drawable/ic_exercises"
        android:title="@string/exercises"
        />
    <item
        android:id="@+id/action_add_workout"
        android:icon="@drawable/ic_add_workout"
        android:title="@string/workouts"

        />

</menu>
