<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:text="@string/additional_information"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/height"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="number"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/weight"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="number"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinnerActivityLevel"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginBottom="8dp"
        android:entries="@array/activity_levels"
        android:prompt="@string/choose_activity_level"
        android:autofillHints="Choose Activity Level"
        />

    <Spinner
        android:id="@+id/spinnerGoal"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginBottom="16dp"
        android:entries="@array/goals"
        android:prompt="@string/choose_goal" />


    <EditText
        android:id="@+id/editTextDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/date_of_birth"
        android:textColorHint="@color/white"
        android:inputType="none"
        android:onClick="showDatePicker"
        android:focusable="false"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginBottom="16dp"
        android:entries="@array/genders"
        android:prompt="@string/choose_gender" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonbackground"/>

</LinearLayout>
